# mir-algorithm

./: .gitignore  .gitmodules  .travis.yml  Dockerfile.aarch64  LICENSE  NOTICE  README.md  appveyor.yml  circle.yml  dub.json  dub.sdl  dub.selections.json  index.d  meson.build  meson_options.txt  ndslice.graffle  stable_and_latest_tags.py  test_examples.sh  test_travis.sh
.circleci/: config.yml
.github/workflows/: ci.yml  compilers.json
bigint_benchmark/: dub.sdl
bigint_benchmark/source/: app.d
cpp_example/: eye.d  init_rcarray.d  main.cpp  meson.build  run.sh
doc/: Makefile  custom.css  custom.ddoc  gen_modlist.d  run_examples_custom.js
include/: ndslice.h
include/mir/: interpolate.h  ndslice.h  numeric.h  rcarray.h  rcptr.h  series.h  shared_ptr.h  slim_rcptr.h  small_string.h
source/mir/: annotated.d  appender.d  base64.d  bitmanip.d  bitop.d  conv.d  date.d  dynamic_struct.d  ediff.d  exception.d  format.d  format_impl.d  functional.d  lob.d  numeric.d  parse.d  polynomial.d  primitives.d  qualifier.d  range.d  rcarray.d  reflection.d  serde.d  series.d  shared_ptr.d  small_array.d  small_string.d  stdio.d  string.d  string_map.d  test.d  timeseries.d  timestamp.d  type_info.d  utility.d  variant.d
source/mir/algebraic_alias/: ion.d  json.d  transform.d
source/mir/algorithm/: iteration.d  setops.d
source/mir/array/: allocation.d  primitives.d
source/mir/bignum/: decimal.d  fixed.d  fp.d  integer.d  kernel.d  low_level_view.d  phobos_kernel.d
source/mir/bignum/internal/: dec2float.d  dec2float_table.d  dec2flt_table.d  kernel.d  parse.d  phobos_kernel.d
source/mir/bignum/internal/ryu/: generic_128.d  table.d
source/mir/combinatorics/: package.d
source/mir/container/: binaryheap.d
source/mir/cpp_export/: numeric.d
source/mir/graph/: package.d  tarjan.d  utility.d
source/mir/internal/: ldc_simd.d  memory.d  utility.d
source/mir/interpolate/: constant.d  extrapolate.d  generic.d  interfaces.d  linear.d  mod.d  package.d  pchip.d  polynomial.d  spline.d  utility.d
source/mir/interpolation/: constant.d  cubic.d  linear.d  package.d  pchip.d  utility.d
source/mir/math/: common.d  constant.d  internal.d  numeric.d  package.d  stat.d  sum.d
source/mir/math/func/: expdigamma.d  hermite.d  normal.d
source/mir/ndslice/: algorithm.d  allocation.d  chunks.d  concatenation.d  cursor.d  dynamic.d  field.d  filling.d  fuse.d  internal.d  iteration.d  iterator.d  join.d  mutation.d  ndfield.d  package.d  selection.d  slice.d  soa.d  sorting.d  stack.d  topology.d  traits.d
source/mir/ndslice/connect/: cpp.d  cpython.d
source/mir/rc/: array.d  context.d  package.d  ptr.d  slim_ptr.d
source/std/: backdoor.d
